<resources>
    <string name="app_name">FreeTAK UAS</string>
    <string name="uas_button_disabled">UAS [NOT READY]</string>
    <string name="uas_button_enabled">UAS [READY]</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Select None</string>
    <string name="search">Search</string>
    <string name="run">Run</string>
    <string name="rtmp_hd">Enable HD RTMP</string>
    <string name="camera_name_primary">Primary Camera Name</string>
    <string name="camera_name_secondary">Secondary Camera Name</string>
    <string name="camera_side_primary">Primary Camera Side</string>
    <string name="camera_side_secondary">Secondary Camera Side</string>
    <string name="focus_point">Focus Point</string>
    <string name="metering_point">Metering Point</string>
    <string name="gimbal_control">Gimbal Control</string>
    <string name="display_grid">Display Grid</string>
    <string name="txt_grid_overlay_selection">Change Grid Overlay Type: </string>
    <string name="txt_center_point_selection">Change Center Point Type: </string>
    <string name="txt_video_feed_selection">Change Video Source: </string>
    <string name="txt_video_dynamic_size">Test FPV widget view in different size: </string>
    <string name="grid_type_none">None</string>
    <string name="grid_type_parallel">Parallel</string>
    <string name="grid_type_parallel_diagonal">Parallel with Diagonals</string>
    <string name="set_auto_video_feed">Auto</string>
    <string name="set_primary_video_feed">Primary</string>
    <string name="set_secondary_video_feed">Secondary</string>
    <string name="set_fpv_size">Resize</string>
    <string name="sdk_version">DJI SDK Version: %1$s</string>
    <string name="fts_ip">Set FreeTAKServer IP:PORT</string>
    <string name="fts_apikey">Set FreeTAKServer API Key</string>
    <string name="rtmp_ip">Set RTMP IP:PORT</string>
    <string name="rtmp_port">Set RTMP Port</string>
    <string name="drone_name">Set UAS Identifier</string>
    <string name="logo">FreeTAKUAS Logo</string>
    <string name="provider_google_maps">Google Maps</string>
    <string name="provider_here_maps">Here Maps</string>
    <string name="provider_amaps">AMaps</string>
    <string name="provider_mapbox">Mapbox</string>
    <string name="error_map_not_initialized">The map has not been initialized yet</string>
    <string name="home_direction">Home Direction</string>
    <string name="auto_frame">Auto Frame</string>
    <string name="unlock_flyzones">Unlock Fly Zones</string>
    <string name="show_flight_path">Show Flight Path</string>
    <string name="show_home_point">Show Home Point</string>
    <string name="show_gimbal_yaw">Show Gimbal Yaw</string>
    <string name="clear_flight_path">Clear Flight Path</string>
    <string name="replace_icon">Replace Icon</string>
    <string name="fly_zone">Fly Zone</string>
    <string name="fly_zone_legend">Fly Zone Legend</string>
    <string name="dji_account_indicator">DJI Account Login Indicator</string>
    <string name="new_color">New Color</string>
    <string name="sync">Sync</string>
    <string-array name="iconArray">
        <item>Aircraft</item>
        <item>Home</item>
        <item>Gimbal Yaw</item>
        <item>Locked Zone</item>
        <item>Unlocked Zone</item>
    </string-array>
    <string-array name="mapTypeArray">
        <item>Standard</item>
        <item>Satellite</item>
        <item>Hybrid</item>
    </string-array>
    <string-array name="lineTypeArray">
        <item>Home Direction</item>
        <item>Flight Path</item>
        <item>Fly Zone Border</item>
    </string-array>

    <string name="mapbox_id">${MAPBOX_DOWNLOADS_TOKEN}</string>
    <string name="enable_object_detection">Enable Object Detection</string>
    <string name="set_score_threshold">Set Score Threshold</string>
    <string name="thread_count">Set Thread Count</string>
    <string name="high_confidence">High Confidence (75%)</string>
    <string name="multicast_only">No Server (Multicast Only)</string>
</resources>
