<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/complete_ui_widgets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:padding="14dp"
                android:text="@string/uas_button_disabled"
                android:textColor="@color/background_blue"
                android:textSize="14sp" />
            <!--
                    <Button
                        android:id="@+id/bt_customized_ui_widgets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="14dp"
                        android:text="Custom Widgets"
                        android:textColor="@color/background_blue"
                        android:textSize="14sp"
                        android:visibility="invisible" />

                    <Button
                        android:id="@+id/bt_map_widget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="14dp"
                        android:text="Map Widget Demo"
                        android:textColor="@color/background_blue"
                        android:textSize="14sp"
                        android:visibility="invisible" />
            -->
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edittext_fts_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:background="@color/gray"
                android:gravity="center"
                android:hint="@string/fts_ip"
                android:imeOptions="actionDone"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textColorHint="@android:color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edittext_rtmp_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:background="@color/gray"
                android:gravity="center"
                android:hint="@string/rtmp_ip"
                android:imeOptions="actionDone"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textColorHint="@android:color/white"
                android:textSize="15sp" />

        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <EditText
                android:id="@+id/edittext_fts_apikey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:background="@color/gray"
                android:gravity="center"
                android:hint="@string/fts_apikey"
                android:imeOptions="actionDone"
                android:maxLength="32"
                android:maxLines="1"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textColorHint="@android:color/white"
                android:textSize="15sp" />


            <!--
            <EditText
                android:id="@+id/edittext_rtmp_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/gray"
                android:gravity="center"
                android:hint="@string/rtmp_port"
                android:imeOptions="actionDone"
                android:maxLength="15"
                android:maxLines="1"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textColorHint="@android:color/white"
                android:textSize="15sp" />
        -->
            <EditText
                android:id="@+id/edittext_drone_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:background="@color/gray"
                android:gravity="center"
                android:hint="@string/drone_name"
                android:imeOptions="actionDone"
                android:maxLength="15"
                android:maxLines="1"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textColorHint="@android:color/white"
                android:textSize="15sp" />

        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/object_detector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/enable_object_detection"
                android:textColor="@color/white"
                android:textSize="15sp" />
            <CheckBox
                android:id="@+id/od_75"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/high_confidence"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:checked="false"/>
        </TableRow>
        <TableRow>
            <CheckBox
                android:id="@+id/hd_stream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/rtmp_hd"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:checked="false"/>
            <CheckBox
                android:id="@+id/NoServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="14dp"
                android:text="@string/multicast_only"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:checked="false" />
            <!--
                <EditText
                    android:id="@+id/edittext_numThreads"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_margin="10dp"
                    android:background="@color/gray"
                    android:gravity="center"
                    android:hint="@string/thread_count"
                    android:inputType="number"
                    android:digits="1,2,3,4,5,6,7,8,9"
                    android:imeOptions="actionDone"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:padding="2dp"
                    android:textColor="@color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="15sp" />

            <CheckBox
                android:id="@+id/option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="14dp"
                android:text="option3"
                android:textColor="@color/white"
                android:textSize="15sp" />
            -->
        </TableRow>

        <TableRow>
<!--
            <EditText
                android:id="@+id/edittext_scoreThreshold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:background="@color/gray"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:digits="1,2,3,4,5,6,7,8,9,."
                android:hint="@string/set_score_threshold"
                android:imeOptions="actionDone"
                android:maxLength="15"
                android:maxLines="1"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textColorHint="@android:color/white"
                android:textSize="15sp" />
-->
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="2dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="10sp"
                tools:text="@string/app_version" />
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:gravity="left"
        android:src="@drawable/ftsuas_logo" />

</LinearLayout>